deployment/k8s-base-layer-deployment.yml
###################################
# USER
###################################
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user
  labels:
    app: user
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user
  template:
    metadata:
      labels:
        app: user
    spec:
      containers:
        - name: user
          image: us-central1-docker.pkg.dev/cloud-native-course-31/native-calculadora-app/user:1.0
          ports:
            - containerPort: 5001
          imagePullPolicy: Always          
      volumes:
        - name: appsecrets-volume
          secret:
            secretName: appsecrets
         

---
kind: Service
apiVersion: v1
metadata:
  name: servicio-user
  annotations:
    cloud.google.com/backend-config: '{"default": "user-config"}'
spec:
  type: NodePort
  selector:
    app: user
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5001
      nodePort: 31019

---
###################################
# ROUTE
###################################

apiVersion: apps/v1
kind: Deployment
metadata:
  name: route
  labels:
    app: route
spec:
  replicas: 1
  selector:
    matchLabels:
      app: route
  template:
    metadata:
      labels:
        app: route
    spec:
      containers:
        - name: route
          image: us-central1-docker.pkg.dev/cloud-native-course-31/native-calculadora-app/route:1.0
          ports:
            - containerPort: 5003
          imagePullPolicy: Always
      volumes:
        - name: appsecrets-volume
          secret:
            secretName: appsecrets
          

---
kind: Service
apiVersion: v1
metadata:
  name: servicio-route
  annotations:
    cloud.google.com/backend-config: '{"default": "route-config"}'
spec:
  type: NodePort
  selector:
    app: route
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5003
      nodePort: 31017

---
###################################
# OFFER
###################################

apiVersion: apps/v1
kind: Deployment
metadata:
  name: offer
  labels:
    app: offer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: offer
  template:
    metadata:
      labels:
        app: offer
    spec:
      containers:
        - name: offer
          image: us-central1-docker.pkg.dev/cloud-native-course-31/native-calculadora-app/offer:1.0
          ports:
            - containerPort: 5004
          imagePullPolicy: Always
      volumes:
        - name: appsecrets-volume
          secret:
            secretName: appsecrets
          

---
kind: Service
apiVersion: v1
metadata:
  name: servicio-offer
  annotations:
    cloud.google.com/backend-config: '{"default": "offer-config"}'
spec:
  type: NodePort
  selector:
    app: offer
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5004
      nodePort: 31018

---
###################################
# PUBLICATION
###################################

apiVersion: apps/v1
kind: Deployment
metadata:
  name: publication
  labels:
    app: publication
spec:
  replicas: 1
  selector:
    matchLabels:
      app: publication
  template:
    metadata:
      labels:
        app: publication
    spec:
      containers:
        - name: publication
          image: us-central1-docker.pkg.dev/cloud-native-course-31/native-calculadora-app/publication:1.0
          ports:
            - containerPort: 5002
          imagePullPolicy: Always
      volumes:
        - name: appsecrets-volume
          secret:
            secretName: appsecrets
          

---
kind: Service
apiVersion: v1
metadata:
  name: servicio-publication
  annotations:
    cloud.google.com/backend-config: '{"default": "publication-config"}'
spec:
  type: NodePort
  selector:
    app: publication
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5002
      nodePort: 31020
